--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,7 @@
 
   {% include head.html %}
 
-  <body>
+  <body class="theme-base-0d">
 
     {% include sidebar.html %}
 
@@ -43,5 +43,6 @@
         }, false);
       })(document);
     </script>
+
   </body>
 </html>
