--- a/_includes/head.html
+++ b/_includes/head.html
@@ -30,9 +30,6 @@
   
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
   <script src="{{ site.baseurl }}public/toc.js"></script>
-  <script type="text/javascript">
-	  $(document).ready(function() {
-    $('#toc').toc();
-	});
-  </script>
+  <script src="{{ site.baseurl }}public/tabletop.js"></script>
+  <script type="text/javascript"> $(document).ready(function() { $('#toc').toc();}); </script>
 </head>
