--- a/_includes/head.html
+++ b/_includes/head.html
@@ -31,5 +31,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
   <script src="{{ site.baseurl }}public/toc.js"></script>
   <script src="{{ site.baseurl }}public/tabletop.js"></script>
+  <link type="text/css" media="screen" rel="stylesheet" href="{{ site.baseurl }}public/css/responsive-tables.css" />
+  <script type="text/javascript" src="{{ site.baseurl }}public/responsive-tables.js"></script>
   <script type="text/javascript"> $(document).ready(function() { $('#toc').toc();}); </script>
 </head>
