--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,6 +20,7 @@
       </div>
 
       <div class="container content">
+	  <img src="http://datala.github.io/flushots/img/datala.png" width="150px;" align="right">
         {{ content }}
       </div>
     </div>
