--- a/_includes/head.html
+++ b/_includes/head.html
@@ -24,16 +24,16 @@
   <link rel="stylesheet" href="{{ site.baseurl }}/public/css/lanyon.css">
 
   <!-- Icons -->
-  <link rel="apple-touch-icon-precomposed" sizes="144x144" href="{{ site.baseurl }}public/apple-touch-icon-precomposed.png">
-  <link rel="shortcut icon" href="{{ site.baseurl }}public/favicon.ico">
+  <link rel="apple-touch-icon-precomposed" sizes="144x144" href="{{ site.baseurl }}/public/apple-touch-icon-precomposed.png">
+  <link rel="shortcut icon" href="{{ site.baseurl }}/public/favicon.ico">
 
   <!-- RSS -->
   <link rel="alternate" type="application/rss+xml" title="RSS" href="/atom.xml">
   
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-  <script src="{{ site.baseurl }}public/toc.js"></script>
-  <script src="{{ site.baseurl }}public/tabletop.js"></script>
+  <script src="{{ site.baseurl }}/public/toc.js"></script>
+  <script src="{{ site.baseurl }}/public/tabletop.js"></script>
   <link type="text/css" media="screen" rel="stylesheet" href="{{ site.baseurl }}public/css/responsive-tables.css" />
-  <script type="text/javascript" src="{{ site.baseurl }}public/responsive-tables.js"></script>
+  <script type="text/javascript" src="{{ site.baseurl }}/public/responsive-tables.js"></script>
   <script type="text/javascript"> $(document).ready(function() { $('#toc').toc();}); </script>
 </head>
