change base colors to match weho site and add favicon

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -21,13 +21,9 @@
         {% endif %}
       {% endif %}
     {% endfor %}
-
-    <span class="sidebar-nav-item">Currently v{{ site.version }}</span>
   </nav>
 
   <div class="sidebar-item">
-    <p>
-      &copy; {{ site.time | date: '%Y' }}.
-    </p>
+    <p><a href="http://wehox.org">WeHoX.org</a></p>
   </div>
 </div>
